fixed alignment on intro picture

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -26,9 +26,9 @@
 		flex-direction: column;
 
 		@media screen and (max-width: 1100px) {
-			flex: none;
+			// flex: none;
 			width: 100%;
-			height: 300px;
+			height: 50%;
 			z-index: -10;
 			overflow-y: hidden;
 		}
@@ -49,8 +49,12 @@
 			align-items: center;
 			text-align: center;
 			justify-content: center;
-			margin-top: 150px;
+			margin-top: 250px;
 			height: 100%;
+		}
+
+		@media screen and (max-width: 800px) {
+			margin: 0;
 		}
 
 		.intro-introduction {
@@ -59,6 +63,7 @@
 
 			@media screen and (max-width: 500px) {
 				font-size: 40px;
+				margin-top: 200px;
 			}
 		}
 
@@ -97,7 +102,7 @@
 		}
 
 		.intro-description {
-			@media screen and (max-width: 500px) {
+			@media screen and (max-width: 800px) {
 				display: none;
 			}
 
@@ -181,13 +186,17 @@
 
 	@media screen and (max-width: 1100px) {
 		align-items: center;
-		justify-content: center;
 		display: flex;
 		flex: none;
-		height: 300px;
+		height: 50%;
 		width: 100%;
 		overflow: hidden;
+		padding-bottom: 200px;
 	}
+
+	// @media screen and (max-width: 800px) {
+	// 	height: 1px;
+	// }
 
 	.intro-right-background {
 		clip-path: polygon(84% 3%, 0 66%, 100% 100%);
@@ -201,11 +210,7 @@
 		position: absolute;
 		right: 150px;
 
-		@media screen and (max-width: 500px) {
-			display: none;
-		}
-
-		@media screen and (max-width: 1100px) {
+		@media screen and (max-width: 1500px) {
 			display: none;
 		}
 
@@ -215,24 +220,30 @@
 	}
 
 	.intro-picture {
-		height: 400px;
-		width: 400px;
+		height: 500px;
+		width: 500px;
 		position: absolute;
-		right: 150px;
-		bottom: 300px;
+		right: 80px;
+		bottom: 400px;
 		z-index: 3;
 
 		@media screen and (max-width: 1100px) {
+			height: 500px;
+			width: 500px;
+			// bottom: 200px;
+			// right: 280px;
 			position: relative;
-			margin-top: 400px;
-			margin-left: 350px;
-			bottom: 200px;
+			z-index: 1000;
+			right: 0;
+			bottom: 0;
 		}
 
-		@media screen and (max-width: 500px) {
-			position: relative;
+		@media screen and (max-width: 800px) {
 			height: 300px;
 			width: 300px;
+			margin-top: 60px;
+			position: relative;
+			z-index: 1000;
 		}
 
 		@media screen and (min-width: 1500px) {
